# C-practise-notes

./: CMakeLists.txt
Section10/: CppStrings.cpp  LetterPyramid.cpp  c_style_strings.cpp  challange10.cpp  characters.cpp
Section11/: passByRefrence.cpp  penny_a_day.cpp
Section12/: arithmetic_ptrs.cpp  array_pointer.cpp  exe34_reverseString.cpp  passing_to_function.cpp  pointers_allocating.cpp
Section6/: RoomCleaningPrice.cpp
Section7/: arrays_7_1.cpp  vectors_7_2.cpp
Section8/: mixed_type_expressions.cpp  operators.cpp  sectionChallage.cpp
Section9/: forloops.cpp  sectionChallange9.cpp
ex2/: ex2.cpp
leet_code/: LongestCommonPrefix.cpp  RomanToInteger.cpp  stocks_buy_sell.cpp  threeSum_15.cpp
prj1/: main.cpp
